Fix overflow issue

--- a/src/components/storyblok/PageHome/PageHome.module.sass
+++ b/src/components/storyblok/PageHome/PageHome.module.sass
@@ -16,7 +16,7 @@
   position: absolute
   left: 50%
   bottom: 1rem
-  transform: translateX(-50%)
+  transform: translateX(-50%) !important
   width: 49.5vmin
   height: 66vmin
   transition: background-color var(--transition-theme)
